botoes na lateral

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <main>
         <section id="telefone">
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            seu navegador não é compativel com isso.
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"> <img src="./imagens/home.jpg" alt=""></a> <br>
+            <a href="#" target="tela"> <img src="./imagens/logo-face.jpg" alt=""></a> <br>
+            <a href="#" target="tela"> <img src="./imagens/logo-git.png" alt=""></a> <br>
+            <a href="#" target="tela"> <img src="./imagens/logo-insta.webp" alt=""></a> <br>
+            <a href="#" target="tela"> <img src="./imagens/logo-youtub-jpg.jpg" alt=""></a>
         </section>
     </main>
 </body>
