--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
-            seu navegador não é compativel com isso.
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">seu navegador não é compativel com isso.</iframe>
+            
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"> <img src="./imagens/home.jpg" alt=""></a> <br>
-            <a href="#" target="tela"> <img src="./imagens/logo-face.jpg" alt=""></a> <br>
-            <a href="#" target="tela"> <img src="./imagens/logo-git.png" alt=""></a> <br>
-            <a href="#" target="tela"> <img src="./imagens/logo-insta.webp" alt=""></a> <br>
-            <a href="#" target="tela"> <img src="./imagens/logo-youtub-jpg.jpg" alt=""></a>
+            <a href="./home.html" target="tela"> <img src="./imagens/home.jpg" alt=""></a> <br>
+            <a href="face.html" target="tela"> <img src="./imagens/logo-face.jpg" alt=""></a> <br>
+            <a href="./git.html" target="tela"> <img src="./imagens/logo-git.png" alt=""></a> <br>
+            <a href="instagran.html" target="tela"> <img src="./imagens/logo-insta.webp" alt=""></a> <br>
+            <a href="youtub.html" target="tela"> <img src="./imagens/logo-youtub-jpg.jpg" alt=""></a>
         </section>
     </main>
 </body>
